--- a/app/all-pages.html
+++ b/app/all-pages.html
@@ -96,7 +96,7 @@
                   </tr>
                   <tr>
                     <td>15</td>
-                    <td><a class="link-special" href="blocks.html" target="_blank">Форма, логотипы, документы</a></td>
+                    <td><a class="link-special" href="others.html" target="_blank">Форма, логотипы, документы</a></td>
                   </tr>
                   <tr>
                     <td>16</td>
