--- a/app/blocks.html
+++ b/app/blocks.html
@@ -900,7 +900,7 @@
                 </div>
                 <div class="col-xl-8">
                   <div class="card">
-                    <div class="card__text fix-height-210 text-ddd-210">
+                    <div class="card__text text-ddd-210">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
                       <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
@@ -919,7 +919,7 @@
                 </div>
                 <div class="col-xl-8">
                   <div class="card">
-                    <div class="card__text fix-height-210 text-ddd-210">
+                    <div class="card__text text-ddd-210">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...</p>
                       <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены выплавка</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
@@ -946,7 +946,7 @@
               <div class="row">
                 <div class="col-xl-8">
                   <div class="card">
-                    <div class="card__text fix-height-210 text-ddd-210">
+                    <div class="card__text text-ddd-210">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
                       <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
@@ -965,7 +965,7 @@
               <div class="row">
                 <div class="col-xl-8">
                   <div class="card">
-                    <div class="card__text fix-height-210 text-ddd-210">
+                    <div class="card__text text-ddd-210">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...</p>
                       <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены выплавка</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
@@ -1062,7 +1062,7 @@
                 </div>
                 <div class="col-xl-9">
                   <div class="card">
-                    <div class="card__text fix-height-135 text-ddd-135">
+                    <div class="card__text text-ddd-135">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
                       <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
@@ -1081,7 +1081,7 @@
                 </div>
                 <div class="col-xl-9">
                   <div class="card">
-                    <div class="card__text fix-height-135 text-ddd-135">
+                    <div class="card__text text-ddd-135">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
                       <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
@@ -1100,7 +1100,7 @@
                 </div>
                 <div class="col-xl-9">
                   <div class="card">
-                    <div class="card__text fix-height-135 text-ddd-135">
+                    <div class="card__text text-ddd-135">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
                   </div>
@@ -1681,7 +1681,7 @@
     <script src="js/libs/jquery.min.js"></script>
     <!-- jQuery-UI-->
     <script src="jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
-    <!--script(src='jquery-ui-1.12.1.custom/datepicker-ru.js')-->
+    <script src="jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
     <!--script(src='jquery-ui-1.12.1.custom/datepicker.extension.range.min.js')-->
     <script src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
     <script src="js/libs/jquery.dotdotdot.js"></script>
