--- a/app/productions-system.html
+++ b/app/productions-system.html
@@ -1267,7 +1267,7 @@
     <script src="js/libs/jquery.min.js"></script>
     <!-- jQuery-UI-->
     <script src="jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
-    <!--script(src='jquery-ui-1.12.1.custom/datepicker-ru.js')-->
+    <script src="jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
     <!--script(src='jquery-ui-1.12.1.custom/datepicker.extension.range.min.js')-->
     <script src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
     <script src="js/libs/jquery.dotdotdot.js"></script>
