--- a/app/search-result.html
+++ b/app/search-result.html
@@ -922,7 +922,7 @@
                 </div>
                 <div class="col-12 col-sm-8">
                   <div class="card">
-                    <div class="content-text fix-height-210 text-ddd-210">
+                    <div class="content-text text-ddd-210">
                       <h3 class="margin-bottom-10"><a href="#">Интервью с Серафимович Александром про модернизацию новых разработок</a></h3>
                       <div class="card-date card-date_big margin-bottom-10">11 Декабря 2018, 17:44</div>
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...</p>
@@ -1156,7 +1156,7 @@
     <script src="js/libs/jquery.min.js"></script>
     <!-- jQuery-UI-->
     <script src="jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
-    <!--script(src='jquery-ui-1.12.1.custom/datepicker-ru.js')-->
+    <script src="jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
     <!--script(src='jquery-ui-1.12.1.custom/datepicker.extension.range.min.js')-->
     <script src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
     <script src="js/libs/jquery.dotdotdot.js"></script>
