--- a/app/ads.html
+++ b/app/ads.html
@@ -895,7 +895,7 @@
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
-                    <div class="card__text fix-height-135 text-ddd-135">
+                    <div class="card__text text-ddd-135">
                       <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
                       <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#tabModal1" data-toggle="modal" data-target="#tabModal1">Читать далее</a>
@@ -1242,7 +1242,7 @@
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
-                    <div class="card__text fix-height-135 text-ddd-135">
+                    <div class="card__text text-ddd-135">
                       <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
                       <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#tabModal2" data-toggle="modal" data-target="#tabModal2">Читать далее</a>
@@ -1589,7 +1589,7 @@
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
-                    <div class="card__text fix-height-135 text-ddd-135">
+                    <div class="card__text text-ddd-135">
                       <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
                       <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#tabModal3" data-toggle="modal" data-target="#tabModal3">Читать далее</a>
@@ -1936,7 +1936,7 @@
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
-                    <div class="card__text fix-height-135 text-ddd-135">
+                    <div class="card__text text-ddd-135">
                       <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
                       <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#tabModal4" data-toggle="modal" data-target="#tabModal4">Читать далее</a>
@@ -2283,7 +2283,7 @@
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
-                    <div class="card__text fix-height-135 text-ddd-135">
+                    <div class="card__text text-ddd-135">
                       <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
                       <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#tabModal5" data-toggle="modal" data-target="#tabModal5">Читать далее</a>
@@ -2630,7 +2630,7 @@
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
-                    <div class="card__text fix-height-135 text-ddd-135">
+                    <div class="card__text text-ddd-135">
                       <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
                       <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#tabModal6" data-toggle="modal" data-target="#tabModal6">Читать далее</a>
@@ -2977,7 +2977,7 @@
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
-                    <div class="card__text fix-height-135 text-ddd-135">
+                    <div class="card__text text-ddd-135">
                       <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
                       <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#tabModal7" data-toggle="modal" data-target="#tabModal7">Читать далее</a>
@@ -3500,7 +3500,7 @@
     <script src="js/libs/jquery.min.js"></script>
     <!-- jQuery-UI-->
     <script src="jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
-    <!--script(src='jquery-ui-1.12.1.custom/datepicker-ru.js')-->
+    <script src="jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
     <!--script(src='jquery-ui-1.12.1.custom/datepicker.extension.range.min.js')-->
     <script src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
     <script src="js/libs/jquery.dotdotdot.js"></script>
