--- a/app/profile.html
+++ b/app/profile.html
@@ -1263,7 +1263,7 @@
                 </div>
                 <div class="col-12 col-sm-8">
                   <div class="card">
-                    <div class="card__text fix-height-210 text-ddd-210">
+                    <div class="card__text text-ddd-210">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
                       <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
@@ -1279,7 +1279,7 @@
                 </div>
                 <div class="col-12 col-sm-8">
                   <div class="card">
-                    <div class="card__text fix-height-210 text-ddd-210">
+                    <div class="card__text text-ddd-210">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...</p>
                       <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены выплавка</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
@@ -1597,7 +1597,7 @@
     <script src="js/libs/jquery.min.js"></script>
     <!-- jQuery-UI-->
     <script src="jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
-    <!--script(src='jquery-ui-1.12.1.custom/datepicker-ru.js')-->
+    <script src="jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
     <!--script(src='jquery-ui-1.12.1.custom/datepicker.extension.range.min.js')-->
     <script src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
     <script src="js/libs/jquery.dotdotdot.js"></script>
