--- a/app/404.html
+++ b/app/404.html
@@ -246,7 +246,7 @@
               </div>
               <div class="header-button-inn button-inn">
                 <button class="header-button button button-help">помощь</button>
-                <button class="header-button button active" id="header-navControl" data-toggle="collapse" data-target="#header-nav">Системы</button>
+                <button class="header-button button" id="header-navControl" data-toggle="collapse" data-target="#header-nav">Системы</button>
                 <button class="header-button button button-deploy" id="btnDeploy">Развернуть</button>
                 <!-- <button id="btnToTop" class="header-button button button-toTop">Наверх</button>-->
                 <!-- /.header-box-->
@@ -256,7 +256,7 @@
           </div>
         </div>
         <nav class="header-nav-system">
-          <div class="header-nav-system-wrap collapse show mobile-hide" id="header-nav">
+          <div class="header-nav-system-wrap collapse mobile-hide---" id="header-nav">
             <div class="row align-items-center">
               <div class="col-12 col-md-1"><a class="header-nav-system__item" href="#">
                   <div class="header-nav-system-icon-box"><i class="icon-book"></i></div>
