--- a/app/404.html
+++ b/app/404.html
@@ -869,7 +869,7 @@
             </div>
           </div>
           <div class="col-12 col-md-9">
-            <div class="content-group">
+            <div class="content-group" id="content">
               <div class="card margin-top-15 text-center padding-lg-30 padding-15 bg-color-dark-3"><img class="notfound margin-top-lg-30" src="img/404_1200.png" alt="404 страница не найдена">
                 <div class="content-text">
                   <p><strong>Ошибка 404</strong></p>
@@ -1081,7 +1081,6 @@
     <!--script(src='jquery-ui-1.12.1.custom/datepicker.extension.range.min.js')-->
     <script src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
     <script src="js/libs/jquery.dotdotdot.js"></script>
-    <script src="js/libs/sticky-kit.min.js"></script>
     <!-- slick-->
     <script src="slick/slick.min.js"></script>
     <!-- Bootstrap-->
