--- a/app/blocks.html
+++ b/app/blocks.html
@@ -869,7 +869,7 @@
             </div>
           </div>
           <div class="col-12 col-md-9">
-            <div class="content-group">
+            <div class="content-group" id="content">
               <!--include page/_page-special-title-->
               <!-- Текст + Изображение, тип "Текст справа", с заголовком, кнопкой и без -->
               <div class="row">
@@ -1685,7 +1685,6 @@
     <!--script(src='jquery-ui-1.12.1.custom/datepicker.extension.range.min.js')-->
     <script src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
     <script src="js/libs/jquery.dotdotdot.js"></script>
-    <script src="js/libs/sticky-kit.min.js"></script>
     <!-- slick-->
     <script src="slick/slick.min.js"></script>
     <!-- Bootstrap-->
