--- a/app/calendar3.html
+++ b/app/calendar3.html
@@ -869,7 +869,7 @@
             </div>
           </div>
           <div class="col-12 col-md-9">
-            <div class="content-group">
+            <div class="content-group" id="content">
               <div class="card card-full card-full-head margin-bottom-0">
                 <div class="card-wrap card-full-wrap card-wrap-head">
                   <div class="content-title">
@@ -1112,7 +1112,6 @@
     <!--script(src='jquery-ui-1.12.1.custom/datepicker.extension.range.min.js')-->
     <script src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
     <script src="js/libs/jquery.dotdotdot.js"></script>
-    <script src="js/libs/sticky-kit.min.js"></script>
     <!-- slick-->
     <script src="slick/slick.min.js"></script>
     <!-- Bootstrap-->
