--- a/app/honour.html
+++ b/app/honour.html
@@ -869,7 +869,7 @@
             </div>
           </div>
           <div class="col-12 col-md-9">
-            <div class="content-group">
+            <div class="content-group" id="content">
               <div class="card margin-bottom-15">
                 <div class="content-title">
                   <div class="content-titlebox">
@@ -1252,7 +1252,6 @@
     <!--script(src='jquery-ui-1.12.1.custom/datepicker.extension.range.min.js')-->
     <script src="jquery-ui-1.12.1.custom/jquery.ui.touch-punch.min.js"></script>
     <script src="js/libs/jquery.dotdotdot.js"></script>
-    <script src="js/libs/sticky-kit.min.js"></script>
     <!-- slick-->
     <script src="slick/slick.min.js"></script>
     <!-- Bootstrap-->
