--- a/app/blocks.html
+++ b/app/blocks.html
@@ -1695,6 +1695,6 @@
     <script src="js/libs/validate/jquery.validate.min.js"></script>
     <script src="js/libs/jquery.maskedinput.min.js"></script>
     <!-- main script-->
-    <script src="js/main/main.js?0.3.8"></script><!--[if lte IE 8]><link href="ie9/css/bootstrap-ie8.css" rel="stylesheet" /><![endif]--><!--[if IE 9]><link href="ie9/css/bootstrap-ie9.css" rel="stylesheet" /><![endif]--><!--[if lte IE 9]><link href="ie9/css/style-ie9.css" rel="stylesheet" /><![endif]--><!--[if lte IE 8]><script src="ie9/js/bootstrap-ie8.js"></script><![endif]--><!--[if IE 9]><script src="ie9/js/bootstrap-ie9.js"></script><![endif]--><!--[if lte IE 9]><script src="ie9/js/main-ie9.js"></script><![endif]--><!--[if lte IE 10]><script src="ie9/js/main-ie10.js"></script><![endif]-->
+    <script src="js/main/main.js?0.3.8"></script><!--[if lte IE 9]><link href="ie9/css/bootstrap-ie9.css" rel="stylesheet" /><![endif]--><!--[if lte IE 9]><link rel="stylesheet" href="ie9/css/style-ie9.css" /><![endif]--><!--[if lte IE 9]><script src="ie9/js/bootstrap-ie9.js"></script><![endif]--><!--[if lte IE 9]><script src="ie9/js/main-ie9.js"></script><![endif]--><!--[if lte IE 10]><script src="ie9/js/main-ie10.js"></script><![endif]-->
   </body>
 </html>
