--- a/app/404.html
+++ b/app/404.html
@@ -1034,7 +1034,7 @@
           </div>
           <div class="col-12 col-md-9">
             <div class="content-group" id="content">
-              <div class="card margin-top-15 text-center padding-lg-30 padding-15 bg-color-dark-3"><img class="notfound margin-top-lg-30" src="img/404_1200.png" alt="404 страница не найдена">
+              <div class="card margin-top-xl-15 text-center padding-lg-30 padding-15 bg-color-dark-3"><img class="notfound margin-top-lg-30" src="img/404_1200.png" alt="404 страница не найдена">
                 <div class="content-text">
                   <p><strong>Ошибка 404</strong></p>
                   <p class="padding-bottom-lg-30">Страница не найдена. Перейти на  <a href="/">Главную.</a></p>
