--- a/app/calendar3.html
+++ b/app/calendar3.html
@@ -290,7 +290,7 @@
                     </ul>
                   </li>
                   <li class="nav-more-list__item menu-nav__item menu-nav-header__item">
-                    <div class="menu-nav__textbox menu-nav-header__textbox"><a class="menu-nav__text menu-nav-header__text" href="#">Без ссылки на раздел</a>
+                    <div class="menu-nav__textbox menu-nav-header__textbox"><a class="menu-nav__text menu-nav-header__text" href="#" data-toggle="collapse" data-target="#menu-nav-header-collapse-9" aria-expanded="false" aria-controls="menu-nav-header-collapse-9">Без ссылки на раздел</a>
                       <button class="button-split" data-toggle="collapse" data-target="#menu-nav-header-collapse-9" aria-expanded="false" aria-controls="menu-nav-header-collapse-9"><i class="icon-arrow-down"></i></button>
                     </div>
                     <ul class="collapse" id="menu-nav-header-collapse-9" data-parent="#menu-nav-more">
