--- a/app/profile.html
+++ b/app/profile.html
@@ -1344,7 +1344,7 @@
                     <div class="content-titlebox">
                       <h2>Дни рождения ваших друзей</h2>
                     </div>
-                    <div class="text-right content-text_special content-text_thin">
+                    <div class="text-right content-text_special content-text_thin d-none d-sm-block">
                       <p>Список друзей</p>
                     </div>
                   </div>
