--- a/app/tables.html
+++ b/app/tables.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
     <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="slick/slick.css">
+    <link rel="stylesheet" href="css/bootstrap-modal-ios.css">
     <link href="css/style.css?0.3.9" rel="stylesheet">
     <title>Таблицы | ОМК</title>
   </head>
@@ -1245,9 +1246,9 @@
     </div>
     <div class="modal fade modal-main" id="modalImgBox" tabindex="-1" role="dialog" aria-labelledby="modalImgBoxLabel" aria-hidden="true">
       <div class="modal-dialog container" role="document">
-        <div class="row">
-          <div class="col-xl-12">
-            <div class="modal-content">
+        <div class="modal-content">
+          <div class="row">
+            <div class="col-xl-12">
               <div class="modal-main__content"></div>
             </div>
           </div>
@@ -1256,9 +1257,9 @@
     </div>
     <div class="modal fade modal-main modal-main-contents" id="modalContentSlider" tabindex="-1" role="dialog" aria-labelledby="modalImgBoxLabel" aria-hidden="true">
       <div class="modal-dialog container" role="document">
-        <div class="row">
-          <div class="col-xl-12">
-            <div class="modal-content">
+        <div class="modal-content">
+          <div class="row">
+            <div class="col-xl-12">
               <div class="preloader">
                 <div class="page-loader-circle"></div>
               </div>
@@ -1442,8 +1443,9 @@
     <!-- Валидация-->
     <script src="js/libs/validate/jquery.validate.min.js"></script>
     <script src="js/libs/jquery.maskedinput.min.js"></script>
+    <script src="js/libs/bootstrap-modal-ios.js"></script>
     <!-- main script-->
-    <script src="js/main/main.js?0.3.9"></script><!--[if lte IE 9]><link href="ie9/css/bootstrap-ie9.css" rel="stylesheet" /><![endif]--><!--[if lte IE 9]><link rel="stylesheet" href="ie9/css/style-ie9.css" /><![endif]--><!--[if lte IE 9]><script src="ie9/js/bootstrap-ie9.js"></script><![endif]-->
+    <script src="js/main/main.js?0.3.9"></script><!--[if lte IE 9]><link href="ie9/css/bootstrap-ie9.css" rel="stylesheet" /><![endif]--><!--[if lte IE 9]><link rel="stylesheet" href="ie9/css/style-ie9.css" /><![endif]--><!--[if lte IE 9]><script src="ie9/js/bootstrap-ie9.js"></script><![endif]--><!--[if lte IE 9]><script src="ie9/js/main-ie9.js"></script><![endif]-->
     <script src="ie9/js/main-ie.js?0.3.9"></script>
   </body>
 </html>
