--- a/app/ads.html
+++ b/app/ads.html
@@ -1035,6 +1035,9 @@
           </div>
           <div class="col-12 col-md-9">
             <div class="content-group" id="content">
+              <div class="card text-right margin-top-md-15 margin-bottom-md-0">
+                <button class="button button-border button-width-142">Дать объявление</button>
+              </div>
               <div class="card margin-bottom-0">
                 <div class="content-title">
                   <div class="content-titlebox">
