--- a/app/index.html
+++ b/app/index.html
@@ -1184,7 +1184,7 @@
                           <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
                         </div>
                       </div>
-                      <div class="card__title"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1</a></div>
+                      <div class="card__title"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1...</a></div>
                       <div class="card-date"><span>24 Сентября 2018</span></div>
                     </div>
                   </div>
@@ -1244,7 +1244,7 @@
                             <button class="like-button like-button_light"><i class="icon-like"></i><span class="like-count">1286</span></button>
                           </div>
                         </div>
-                        <div class="card__title card-color-light"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1 трубы ТЭСЦ-1</a></div>
+                        <div class="card__title card-color-light"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1</a></div>
                         <div class="card-date card-date_light"><span>24 Сентября 2018</span></div>
                       </div>
                     </div>
@@ -1400,7 +1400,7 @@
                           <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
                         </div>
                       </div>
-                      <div class="card__title"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1</a></div>
+                      <div class="card__title"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1...</a></div>
                       <div class="card-date"><span>24 Сентября 2018</span></div>
                     </div>
                   </div>
@@ -1460,7 +1460,7 @@
                             <button class="like-button like-button_light"><i class="icon-like"></i><span class="like-count">1286</span></button>
                           </div>
                         </div>
-                        <div class="card__title card-color-light"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1 трубы ТЭСЦ-1</a></div>
+                        <div class="card__title card-color-light"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1</a></div>
                         <div class="card-date card-date_light"><span>24 Сентября 2018</span></div>
                       </div>
                     </div>
@@ -1616,7 +1616,7 @@
                           <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
                         </div>
                       </div>
-                      <div class="card__title"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1</a></div>
+                      <div class="card__title"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1...</a></div>
                       <div class="card-date"><span>24 Сентября 2018</span></div>
                     </div>
                   </div>
@@ -1676,7 +1676,7 @@
                             <button class="like-button like-button_light"><i class="icon-like"></i><span class="like-count">1286</span></button>
                           </div>
                         </div>
-                        <div class="card__title card-color-light"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1 трубы ТЭСЦ-1</a></div>
+                        <div class="card__title card-color-light"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1</a></div>
                         <div class="card-date card-date_light"><span>24 Сентября 2018</span></div>
                       </div>
                     </div>
@@ -1832,7 +1832,7 @@
                           <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
                         </div>
                       </div>
-                      <div class="card__title"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1</a></div>
+                      <div class="card__title"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1...</a></div>
                       <div class="card-date"><span>24 Сентября 2018</span></div>
                     </div>
                   </div>
@@ -1892,7 +1892,7 @@
                             <button class="like-button like-button_light"><i class="icon-like"></i><span class="like-count">1286</span></button>
                           </div>
                         </div>
-                        <div class="card__title card-color-light"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1 трубы ТЭСЦ-1</a></div>
+                        <div class="card__title card-color-light"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1</a></div>
                         <div class="card-date card-date_light"><span>24 Сентября 2018</span></div>
                       </div>
                     </div>
