--- a/app/search-result.html
+++ b/app/search-result.html
@@ -1066,13 +1066,13 @@
               <div class="card">
                 <div class="content-text">
                   <h3 class="margin-bottom-10"><a href="#">Серафимович, Александр Серафимович</a></h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
-                  <p>... в нашем цеху Алекса́ндр Серафи́мович Серафимо́вич выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много</p>
+                  <p> ... в нашем цеху <strong>Алекса́ндр Серафи́мович Серафимо́вич</strong> выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел ...</p>
                 </div>
               </div>
               <div class="card">
                 <div class="content-text">
                   <h3 class="margin-bottom-10"><a href="#">Серафимович, Александр Серафимович</a></h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
-                  <p>... в нашем цеху Алекса́ндр Серафи́мович Серафимо́вич выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много</p>
+                  <p> ... в нашем цеху <strong>Алекса́ндр Серафи́мович Серафимо́вич</strong> выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел ...</p>
                 </div>
               </div>
               <div class="row">
@@ -1090,8 +1090,7 @@
                     <div class="content-text text-ddd-210">
                       <h3 class="margin-bottom-10"><a href="#">Интервью с Серафимович Александром про модернизацию новых разработок</a></h3>
                       <div class="card-date card-date_big margin-bottom-10">11 Декабря 2018, 17:44</div>
-                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...</p>
-                      <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены выплавка</p><a class="button card__more" href="#">Читать далее</a>
+                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
                   </div>
                 </div>
@@ -1099,25 +1098,25 @@
               <div class="card">
                 <div class="content-text">
                   <h3 class="margin-bottom-10"><a href="#">Серафимович, Александр Серафимович</a></h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
-                  <p>... в нашем цеху Алекса́ндр Серафи́мович Серафимо́вич выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много</p>
+                  <p> ... в нашем цеху <strong>Алекса́ндр Серафи́мович Серафимо́вич</strong> выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел ...</p>
                 </div>
               </div>
               <div class="card">
                 <div class="content-text">
                   <h3 class="margin-bottom-10"><a href="#">Серафимович, Александр Серафимович</a></h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
-                  <p>... в нашем цеху Алекса́ндр Серафи́мович Серафимо́вич выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много</p>
+                  <p> ... в нашем цеху <strong>Алекса́ндр Серафи́мович Серафимо́вич</strong> выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел ...</p>
                 </div>
               </div>
               <div class="card">
                 <div class="content-text">
                   <h3 class="margin-bottom-10"><a href="#">Серафимович, Александр Серафимович</a></h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
-                  <p>... в нашем цеху Алекса́ндр Серафи́мович Серафимо́вич выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много</p>
+                  <p> ... в нашем цеху <strong>Алекса́ндр Серафи́мович Серафимо́вич</strong> выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел ...</p>
                 </div>
               </div>
               <div class="card">
                 <div class="content-text">
                   <h3 class="margin-bottom-10"><a href="#">Серафимович, Александр Серафимович</a></h3><a class="link-search" href="">https://portal.omk.ru/news/omk_news...</a>
-                  <p>... в нашем цеху Алекса́ндр Серафи́мович Серафимо́вич выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много</p>
+                  <p> ... в нашем цеху <strong>Алекса́ндр Серафи́мович Серафимо́вич</strong> выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел выполняет много важных дел ...</p>
                 </div>
               </div>
             </div>
