--- a/app/ads.html
+++ b/app/ads.html
@@ -1063,10 +1063,9 @@
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
-                    <div class="card__text card__text_mobile text-ddd-135">
+                    <div class="card__text card__text_mobile">
                       <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
-                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
-                      <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#tabModal1" data-toggle="modal" data-target="#tabModal1">Читать далее</a>
+                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании ...</p><a class="button card__more" href="#tabModal1" data-toggle="modal" data-target="#tabModal1">Читать далее</a>
                     </div>
                   </div>
                 </div>
@@ -1410,10 +1409,9 @@
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
-                    <div class="card__text card__text_mobile text-ddd-135">
+                    <div class="card__text card__text_mobile">
                       <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
-                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
-                      <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#tabModal2" data-toggle="modal" data-target="#tabModal2">Читать далее</a>
+                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании ...</p><a class="button card__more" href="#tabModal2" data-toggle="modal" data-target="#tabModal2">Читать далее</a>
                     </div>
                   </div>
                 </div>
@@ -1757,10 +1755,9 @@
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
-                    <div class="card__text card__text_mobile text-ddd-135">
+                    <div class="card__text card__text_mobile">
                       <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
-                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
-                      <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#tabModal3" data-toggle="modal" data-target="#tabModal3">Читать далее</a>
+                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании ...</p><a class="button card__more" href="#tabModal3" data-toggle="modal" data-target="#tabModal3">Читать далее</a>
                     </div>
                   </div>
                 </div>
@@ -2104,10 +2101,9 @@
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
-                    <div class="card__text card__text_mobile text-ddd-135">
+                    <div class="card__text card__text_mobile">
                       <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
-                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
-                      <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#tabModal4" data-toggle="modal" data-target="#tabModal4">Читать далее</a>
+                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании ...</p><a class="button card__more" href="#tabModal4" data-toggle="modal" data-target="#tabModal4">Читать далее</a>
                     </div>
                   </div>
                 </div>
@@ -2451,10 +2447,9 @@
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
-                    <div class="card__text card__text_mobile text-ddd-135">
+                    <div class="card__text card__text_mobile">
                       <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
-                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
-                      <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#tabModal5" data-toggle="modal" data-target="#tabModal5">Читать далее</a>
+                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании ...</p><a class="button card__more" href="#tabModal5" data-toggle="modal" data-target="#tabModal5">Читать далее</a>
                     </div>
                   </div>
                 </div>
@@ -2798,10 +2793,9 @@
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
-                    <div class="card__text card__text_mobile text-ddd-135">
+                    <div class="card__text card__text_mobile">
                       <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
-                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
-                      <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#tabModal6" data-toggle="modal" data-target="#tabModal6">Читать далее</a>
+                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании ...</p><a class="button card__more" href="#tabModal6" data-toggle="modal" data-target="#tabModal6">Читать далее</a>
                     </div>
                   </div>
                 </div>
@@ -3145,10 +3139,9 @@
                 </div>
                 <div class="col-12 col-sm-9">
                   <div class="card">
-                    <div class="card__text card__text_mobile text-ddd-135">
+                    <div class="card__text card__text_mobile">
                       <p><strong>Контакты:</strong> +7 (903) 033 03 03,&nbsp;<a class="link-deafult" href="mailto:/contact@omk.ru">contact@omk.ru</a></p>
-                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
-                      <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#tabModal7" data-toggle="modal" data-target="#tabModal7">Читать далее</a>
+                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании ...</p><a class="button card__more" href="#tabModal7" data-toggle="modal" data-target="#tabModal7">Читать далее</a>
                     </div>
                   </div>
                 </div>
