--- a/app/blocks.html
+++ b/app/blocks.html
@@ -1054,7 +1054,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-4">
+                <div class="col-md-4">
                   <div class="card">
                     <div class="card__imgbox card__imgbox_sm" style="background-image: url(img/block-img-01.jpg);">
                       <div class="card-warning-text hide">
@@ -1063,17 +1063,16 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-8">
+                <div class="col-md-8">
                   <div class="card">
-                    <div class="card__text text-ddd-210">
+                    <div class="card__text">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
-                      <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-4">
+                <div class="col-md-4">
                   <div class="card">
                     <div class="card-third__imgbox card__imgbox" style="background-image: url(img/block-img-02.jpg);">
                       <div class="card-warning-text hide">
@@ -1082,11 +1081,11 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-8">
+                <div class="col-md-8">
                   <div class="card">
-                    <div class="card__text text-ddd-210">
+                    <div class="card__text">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...</p>
-                      <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены выплавка</p><a class="button card__more" href="#">Читать далее</a>
+                      <p>Литейно-прокатный комплекс - уникальное для России...</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
                   </div>
                 </div>
@@ -1109,15 +1108,14 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-8">
+                <div class="col-md-8">
                   <div class="card">
                     <div class="card__text text-ddd-210">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
-                      <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-md-4">
                   <div class="card">
                     <div class="card__imgbox card__imgbox_sm" style="background-image: url(img/block-img-05.jpg);">
                       <div class="card-warning-text hide">
@@ -1128,15 +1126,15 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-8">
+                <div class="col-md-8">
                   <div class="card">
                     <div class="card__text text-ddd-210">
-                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса...</p>
-                      <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены процесс совмещены выплавка</p><a class="button card__more" href="#">Читать далее</a>
+                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном...</p>
+                      <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором ...</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-4">
+                <div class="col-md-4">
                   <div class="card">
                     <div class="card__imgbox card__imgbox_sm" style="background-image: url(img/block-img-06.jpg);">
                       <div class="card-warning-text hide">
@@ -1164,27 +1162,27 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-6">
+                <div class="col-md-6">
                   <div class="card card-half">
                     <div class="card__imgbox card__imgbox_lg margin-bottom-15" style="background-image: url(img/block-img-03.jpg);">
                       <div class="card-warning-text hide">
                         <p></p>
                       </div>
                     </div>
-                    <div class="card__text fix-height-260 text-ddd-260">
-                      <p>Конкурс «Проектный Олимп» проводится с 2014 года аналитическим центром при Правительстве Российской Федерации. С 2017 года в конкурсе могут принимать участие не только органы государственной власти.</p><a class="button card__more" href="#">Читать далее</a>
+                    <div class="card__text">
+                      <p>Конкурс «Проектный Олимп» проводится с 2014 года аналитическим центром при Правительстве Российской Федерации. С 2017 года в конкурсе могут принимать участие не только органы государственной власти.</p>
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-md-6">
                   <div class="card card-half">
                     <div class="card__imgbox card__imgbox_lg margin-bottom-15" style="background-image: url(img/block-img-08.jpg);">
                       <div class="card-warning-text hide">
                         <p></p>
                       </div>
                     </div>
-                    <div class="card__text fix-height-260 text-ddd-260">
-                      <p>Конкурс «Проектный Олимп» проводится с 2014 года аналитическим центром при Правительстве Российской Федерации. С 2017 года в конкурсе могут принимать участие не только органы государственной власти, государственные корпорации и компании, а также частные компании, оказывающие наиболее значительное влияние на развитие экономики. Оценка в номинации «Лучший проект года» проводилась по методике Российской национальной ассоциации управления Российскойнациональнойассоциацииуправления</p><a class="button card__more" href="#">Читать далее</a>
+                    <div class="card__text">
+                      <p>Конкурс «Проектный Олимп» проводится с 2014 года аналитическим центром при Правительстве Российской Федерации. С 2017 года в конкурсе могут принимать участие не только органы государственной власти, государственные корпорации и компании, а также частные компании, оказывающие наиболее значительное влияние наиболее значительное влияние на развитие экономики...</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
                   </div>
                 </div>
@@ -1216,7 +1214,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-3">
+                <div class="col-md-3">
                   <div class="card">
                     <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-01.jpg);">
                       <div class="card-warning-text hide">
@@ -1225,17 +1223,16 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-9">
+                <div class="col-md-9">
                   <div class="card">
-                    <div class="card__text text-ddd-135">
+                    <div class="card__text">
                       <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
-                      <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-3">
+                <div class="col-md-3">
                   <div class="card">
                     <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-09.jpg);">
                       <div class="card-warning-text hide">
@@ -1244,17 +1241,16 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-9">
+                <div class="col-md-9">
                   <div class="card">
-                    <div class="card__text text-ddd-135">
-                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
-                      <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#">Читать далее</a>
+                    <div class="card__text">
+                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став...</p><a class="button card__more" href="#">Читать далее</a>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="row">
-                <div class="col-xl-3">
+                <div class="col-md-3">
                   <div class="card">
                     <div class="card__imgbox card__imgbox_xs" style="background-image: url(img/block-img-04.jpg);">
                       <div class="card-warning-text hide">
@@ -1263,10 +1259,10 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xl-9">
+                <div class="col-md-9">
                   <div class="card">
-                    <div class="card__text text-ddd-135">
-                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p><a class="button card__more" href="#">Читать далее</a>
+                    <div class="card__text">
+                      <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
                     </div>
                   </div>
                 </div>
