--- a/app/productions-system.html
+++ b/app/productions-system.html
@@ -1062,7 +1062,7 @@
                           <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
                         </div>
                       </div>
-                      <div class="card__title"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1</a></div>
+                      <div class="card__title"><a href="#">Насосно-компрессорные трубы ТЭСЦ-1...</a></div>
                       <div class="card-date"><span>24 Сентября 2018</span></div>
                     </div>
                   </div>
